[package]
name = "test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rl_core = { path = "rl_core" }
egui_wgpu_backend = "0.19"
pollster = "0.2"
egui = "0.19"
epi = "0.17"
egui_winit_platform = "0.16"
wgpu = "0.13"
winit = { version="0.27.3" }
