[package]
name = "test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rl_core = { path = "rl_core" }
rl_math = { path = "rl_math" }
rl_render = { path = "rl_render" }
# egui_wgpu_backend = "0.19"
# pollster = "0.2"
# egui = "0.19"
# epi = "0.17"
# egui_winit_platform = "0.16"
# wgpu = "0.13"
# winit = { version="0.27.3" }
vulkano = "0.33"
vulkano-util = "0.33"
vulkano-shaders = "0.33"
# vulkano-win = "0.33"
egui = "0.21"
egui_winit_vulkano = "0.24"
# egui_logger = "0.2.3"
winit = "0.28"
bytemuck = "1.13"
log = "0.4"